@@ -5,6 +5,7 @@
 === 1.0.13 ===
 * Added insert() method to dspu::Sample class that allows to insert some zeroed
   chunks to the sample at the specified position.
+* Improved sidechain algorithm related to RMS refresh.
 
 === 1.0.12 ===
 * Added support of high-precision oversampling routines to dspu::Oversampler module.
